syntax = "proto3";

package pb;

import "trade.proto";

option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";

message CreateTradeRequest {
  string username = 1;
  string buy_order_id = 2;
  string sell_order_id = 3;
  string market_id = 4;
  string price = 5;
  string amount = 6;
  string fee = 7;
}

message CreateTradeResponse {
  Trades trade = 1;
}

